# agent-templates

./: .gitignore  AGENTS.md  pyproject.toml
.claude/: CLAUDE.md
avery/: AGENTS.md  CLAUDE.md  IDENTITY.md  ONBOARDING_GUIDE.md  README.md
avery/areas/example_area/: goals.md  metrics.md  plan.md
avery/daily_logs/: YYYY-MM-DD.md
avery/goals/1-career/: README.md  progress.md
avery/goals/2-macos-products/: README.md  marketing-strategy.md  revenue-tracking.md
avery/goals/3-lumina-labs/: README.md  progress.md
avery/memory/context/: onboarding_status.md
avery/resources/checklists/: interview-prep.md  job-application.md  product-release.md
avery/resources/templates/: job-application.md  product-launch.md  weekly-review.md
default/: CLAUDE.md  README.md  template-sync.yaml
default/areas/example_area/: next-task.md
default/managed_blocks/claude/: general_rules.md
default/resources/scripts/: create-credentials-key.sh  encrypt-credential.sh  load-credential.sh
default/resources/templates/: daily-log.md
dexter/: .gitignore  CLAUDE.md  IDENTITY.md  ONBOARDING_GUIDE.md  README.md
dexter/daily/: 2025-01-05.md
dexter/memory/context/: onboarding_status.md
nova/: .gitignore  CLAUDE.md  IDENTITY.md  ONBOARDING_GUIDE.md  next-task.md
nova/.claude/: .gitkeep
nova/areas/: README.md
nova/logs/: .gitkeep
nova/memory/context/: onboarding_status.md
plans/: template-sync-plan.md
template_sync/: __init__.py  cli.py  config.py  managed_blocks.py  sync.py  util.py
tests/: test_managed_blocks.py  test_sync_idempotent.py  test_sync_skills.py
(+27 files in other folders)
